# quicky_backup

./: .gitignore  Cargo.toml
src/: backup_vault.rs  cli.rs  crypto.rs  main.rs
temp/misc/: cli.txt
temp/vault01/: 64e472ce4f691018  e50559aa80b76a11  vault.json  vault_config.json
temp/vault_en/: 0887462eb50f3c65  bdf0918494dd906f  f9c9cfb306b0a5fd  vault.json  vault_config.json
