[package]
name = "quicky_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
blake3 = "1.5.1"
clap = { version = "4.5.3", features = ["derive"] }
md5 = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha256 = "1.5.0"
time = "0.3.34"
uuid = { version = "1.8.0", features = ["v4", "v1"] }
