[package]
name = "quicky_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
blake3 = "1.5.1"
clap = { version = "4.5.3", features = ["derive"] }
dialog = "0.3.0"
md5 = "0.7.0"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha256 = "1.5.0"
slint = "1.6.0"
sodiumoxide = "0.2.7"
sysinfo = "0.30.12"
time = "0.3.34"
uuid = { version = "1.8.0", features = ["v4", "v1"] }
